--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-config-htmlacademy": "^4.1.0"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "nouislider": "^15.5.0"
+  },
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "test": "eslint js/"
